<resources>
    <string name="app_name">Simon Says App</string>
    <string name="startButton">Start</string>
    <string name="game_name">Simon Says</string>
    <string name="hardButton">Hard</string>
    <string name="normalButton">Normal</string>
    <string name="easyButton">Easy</string>
    <string name="selectText">Please Select a Difficulty</string>
    <string name="creatorName">by Tyler Ziggas</string>
    <string name="SimonTitle">The Simon Game</string>
    <string name="timerText">"Timer: "</string>
    <string name="scoreText">Score: 0</string>
    <string name="dateText">Date</string>
    <string name="difficultyText">Difficulty</string>
    <string name="currentdifficultytext">DifficultyText</string>
    <string name="currentscoretext">ScoreText</string>
    <string name="playAgainButton">Play Again</string>
    <string name="difficultyHeader">Difficulty</string>
    <string name="scoreHeader">Score</string>
    <string name="dateHeader">Date</string>
    <string name="restart">Restart</string>
    <string name="finish">Finish</string>
    <string name="game_over">GAME OVER</string>
</resources>