<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECC4C4"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="edu.umsl.tyler.MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SimonTitle"
        android:paddingTop="35dp"
        android:paddingBottom="15dp"
        android:textSize="44sp" />

    <TextView
        android:id="@+id/creatorBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creatorName"
        android:paddingBottom="30dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/difficultyBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectText"
        android:paddingTop="5dp"
        android:paddingBottom="20dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="45dp">

        <Button
            android:id="@+id/easyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#2527BC"
            android:textColor="#FFFFFF"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_margin="10dp"
            android:text="@string/easyButton"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/normalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#38BD07"
            android:textColor="#FFFFFF"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_margin="10dp"
            android:text="@string/normalButton"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/hardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#BD0303"
            android:textColor="#FFFFFF"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_margin="10dp"
            android:text="@string/hardButton"
            android:textAllCaps="false"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>